--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="multi-objects-scene" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/游乐园-ppt-1080p.mp4"
+        <source src="./static/videos/游乐园-2k.mp4"
                 type="video/mp4">
       </video>
 <!--       <h2 class="subtitle has-text-centered">
@@ -202,7 +202,7 @@
 <!-- 这里差一个 多个3D objet 多个 Reference image 得到的结果 -->
  
 <!-- 平铺材质的 -->
- 
+
 <!-- partial的 -->
 
 
@@ -255,7 +255,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="multi-objects-scene" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/房子场景-ppt.mp4"
+        <source src="./static/videos/改尺寸后-房子场景-2K.mp4"
                 type="video/mp4">
       </video>
 <!--       <h2 class="subtitle has-text-centered">
