--- a/index.html
+++ b/index.html
@@ -201,6 +201,22 @@
 
 <!-- 这里差一个 多个3D objet 多个 Reference image 得到的结果 -->
  
+<!-- 游乐园的 单个物体 -->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video id="multi-objects-scene" autoplay muted loop playsinline height="100%">
+        <source src="./static/videos/游乐园-单个物体-4k.mp4"
+                type="video/mp4">
+      </video>
+<!--       <h2 class="subtitle has-text-centered">
+        we propose a **Jigsaw3D** to transfer the style of a reference image to 3D objects.
+      </h2> -->
+    </div>
+  </div>
+</section>
+
+
 <!-- 平铺材质的 -->
 
 <!-- partial的 -->
