--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video id="amusement-park-multi" autoplay muted loop playsinline height="100%">
+      <video autoplay muted loop playsinline height="100%">
         <source src="./static/videos/游乐园-2k.mp4" type="video/mp4">
       </video>
     </div>
@@ -141,7 +141,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video id="amusement-park-single" autoplay muted loop playsinline height="100%">
+      <video autoplay muted loop playsinline height="100%">
         <source src="./static/videos/游乐园-单个物体-4k.mp4" type="video/mp4">
       </video>
     </div>
@@ -183,14 +183,14 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video id="house-scene" autoplay muted loop playsinline height="100%">
+      <video autoplay muted loop playsinline height="100%">
         <source src="./static/videos/改尺寸后-房子场景-2K.mp4" type="video/mp4">
       </video>
     </div>
   </div>
 </section>
 
-<!-- 可以添加更多视频展示部分 -->
+<!-- 更多结果展示部分 -->
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
@@ -200,19 +200,21 @@
         <!-- 平铺材质视频 -->
         <div class="content">
           <h3 class="title is-4">平铺材质生成</h3>
-          <video controls playsinline style="width: 100%;">
-            <source src="./static/videos/tileable-textures.mp4" type="video/mp4">
-            您的浏览器不支持HTML5视频标签。
-          </video>
+          <div class="has-text-centered">
+            <video autoplay muted loop playsinline height="100%">
+              <source src="./static/videos/tileable-textures.mp4" type="video/mp4">
+            </video>
+          </div>
         </div>
 
         <!-- 部分风格化视频 -->
         <div class="content">
           <h3 class="title is-4">部分风格化</h3>
-          <video controls playsinline style="width: 100%;">
-            <source src="./static/videos/partial-stylization.mp4" type="video/mp4">
-            您的浏览器不支持HTML5视频标签。
-          </video>
+          <div class="has-text-centered">
+            <video autoplay muted loop playsinline height="100%">
+              <source src="./static/videos/partial-stylization.mp4" type="video/mp4">
+            </video>
+          </div>
         </div>
       </div>
     </div>
