--- a/index.html
+++ b/index.html
@@ -179,16 +179,6 @@
   </div>
 </section>
 
-<!-- 房子场景 -->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/改尺寸后-房子场景-2K.mp4" type="video/mp4">
-      </video>
-    </div>
-  </div>
-</section>
 
 <!-- 更多结果展示部分 -->
 <section class="section">
@@ -197,6 +187,16 @@
       <div class="column">
         <h2 class="title is-3">更多结果展示</h2>
         
+        <!-- 房子场景 -->
+        <div class="content">
+          <h3 class="title is-4">房子场景风格化</h3>
+          <div class="has-text-centered">
+            <video autoplay muted loop playsinline height="100%">
+              <source src="./static/videos/改尺寸后-房子场景-2K.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+
         <!-- 平铺材质视频 -->
         <div class="content">
           <h3 class="title is-4">平铺材质生成</h3>
