--- a/index-v1.html
+++ b/index-v1.html
@@ -130,24 +130,9 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <h3 class="title is-4">游乐园多物体场景风格化</h3>
-      <div class="content has-text-justified">
-        <p>
-          使用Jigsaw3D，我们能够对复杂的多物体3D场景进行风格化处理，同时保持多视角一致性和场景完整性。
-          这里展示了游乐园场景的风格化效果，将原始3D模型转换为具有艺术风格的全新外观。
-        </p>
-      </div>
-      <div class="content has-text-centered">
-        <video id="amusement-park-video"
-               controls
-               muted
-               preload
-               playsinline
-               width="100%">
-          <source src="./static/videos/游乐园-2k.mp4"
-                  type="video/mp4">
-        </video>
-      </div>
+      <video autoplay muted loop playsinline height="100%">
+        <source src="./static/videos/游乐园-2k.mp4" type="video/mp4">
+      </video>
     </div>
   </div>
 </section>
@@ -156,24 +141,9 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <h3 class="title is-4">游乐园单个物体风格化</h3>
-      <div class="content has-text-justified">
-        <p>
-          针对单个3D物体的风格化展示，Jigsaw3D能够精确地将参考图像中的风格特征转移到3D模型上，
-          同时保持几何结构的完整性和多视角一致性。
-        </p>
-      </div>
-      <div class="content has-text-centered">
-        <video id="single-object-video"
-               controls
-               muted
-               preload
-               playsinline
-               width="100%">
-          <source src="./static/videos/游乐园-单个物体-4k.mp4"
-                  type="video/mp4">
-        </video>
-      </div>
+      <video autoplay muted loop playsinline height="100%">
+        <source src="./static/videos/游乐园-单个物体-4k.mp4" type="video/mp4">
+      </video>
     </div>
   </div>
 </section>
@@ -218,63 +188,33 @@
         <h2 class="title is-3">更多结果展示</h2>
         
         <!-- 平铺材质视频 -->
-        <h3 class="title is-4">平铺材质生成</h3>
-        <div class="content has-text-justified">
-          <p>
-            Jigsaw3D能够生成无缝平铺的材质纹理，这些纹理可以直接应用于3D模型表面，
-            实现高质量的风格化效果，同时保持纹理的连续性和一致性。
-          </p>
-        </div>
-        <div class="content has-text-centered">
-          <video id="tileable-textures-video"
-                 controls
-                 muted
-                 preload
-                 playsinline
-                 width="100%">
-            <source src="./static/videos/tileable-textures.mp4"
-                    type="video/mp4">
-          </video>
+        <div class="content">
+          <h3 class="title is-4">平铺材质生成</h3>
+          <div class="has-text-centered">
+            <video autoplay muted loop playsinline height="100%">
+              <source src="./static/videos/tileable-textures.mp4" type="video/mp4">
+            </video>
+          </div>
         </div>
 
         <!-- 部分风格化视频 -->
-        <h3 class="title is-4">部分风格化</h3>
-        <div class="content has-text-justified">
-          <p>
-            我们的方法支持对3D模型进行部分风格化处理，用户可以指定特定的区域应用风格，
-            而其他区域保持原有外观，实现更精细的控制和更丰富的视觉效果。
-          </p>
-        </div>
-        <div class="content has-text-centered">
-          <video id="partial-stylization-video"
-                 controls
-                 muted
-                 preload
-                 playsinline
-                 width="100%">
-            <source src="./static/videos/partial-stylization.mp4"
-                    type="video/mp4">
-          </video>
+        <div class="content">
+          <h3 class="title is-4">部分风格化</h3>
+          <div class="has-text-centered">
+            <video autoplay muted loop playsinline height="100%">
+              <source src="./static/videos/partial-stylization.mp4" type="video/mp4">
+            </video>
+          </div>
         </div>
 
         <!-- 房子场景 -->
-        <h3 class="title is-4">房子场景风格化</h3>
-        <div class="content has-text-justified">
-          <p>
-            在复杂的建筑场景中，Jigsaw3D能够保持结构的完整性和多视角一致性，
-            同时将参考图像的艺术风格精确地转移到整个3D场景中。
-          </p>
-        </div>
-        <div class="content has-text-centered">
-          <video id="house-scene-video"
-                 controls
-                 muted
-                 preload
-                 playsinline
-                 width="100%">
-            <source src="./static/videos/改尺寸后-房子场景-2K.mp4"
-                    type="video/mp4">
-          </video>
+        <div class="content">
+          <h3 class="title is-4">房子场景风格化</h3>
+          <div class="has-text-centered">
+            <video autoplay muted loop playsinline height="100%">
+              <source src="./static/videos/改尺寸后-房子场景-2K.mp4" type="video/mp4">
+            </video>
+          </div>
         </div>
 
       </div>
@@ -327,3 +267,5 @@
 
 </body>
 </html>
+
+
