--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <h3 class="title is-4">游乐园多物体场景风格化</h3>
+      <!-- <h3 class="title is-4">游乐园多物体场景风格化</h3> -->
       <div class="content has-text-justified">
         <p>JIGSAW3D transfers stylistic statistics from 2D images to multiple, diverse 3D meshes.</p>
       </div>
