--- a/index.html
+++ b/index.html
@@ -152,28 +152,6 @@
   </div>
 </section>
 
-<!-- 游乐园单个物体 -->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <h3 class="title is-4">游乐园单个物体风格化</h3>
-      <div class="content has-text-justified">
-        <p>Stylization results on individual 3D objects.</p>
-      </div>
-      <div class="content has-text-centered">
-        <video id="single-object-video"
-               controls
-               muted
-               preload
-               playsinline
-               width="100%">
-          <source src="./static/videos/游乐园-单个物体-4k.mp4"
-                  type="video/mp4">
-        </video>
-      </div>
-    </div>
-  </div>
-</section>
 
 <section class="section">
   <div class="container is-max-desktop">
@@ -201,6 +179,30 @@
             and generalizes to masked partial reference stylization, multi-object scene styling, and tileable texture generation.
           </p>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- 游乐园单个物体 -->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <h3 class="title is-4">Stylization on individual 3D objects.</h3>
+      <div class="content has-text-justified">
+        <!-- <p>Stylization results on individual 3D objects.</p> -->
+      </div>
+      <div class="content has-text-centered">
+        <video id="single-object-video"
+               controls
+               muted
+               preload
+               playsinline
+               width="100%">
+          <source src="./static/videos/游乐园-单个物体-4k.mp4"
+                  type="video/mp4">
+        </video>
       </div>
     </div>
   </div>
