--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                  preload
                  playsinline
                  width="100%">
-            <source src="./static/videos/tileable-textures.mp4"
+            <source src="./static/videos/材质球-v1.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -241,7 +241,7 @@
                  preload
                  playsinline
                  width="100%">
-            <source src="./static/videos/partial-stylization.mp4"
+            <source src="./static/videos/partial-v1.mp4"
                     type="video/mp4">
           </video>
         </div>
